--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 </head>
 <body>
   <h1>Forsaken Lore</h1>
-  <p>Welcome to the beginning of the lore site.</p>
+  <p>Select a category:</p>
+
+  <div class="img-button">
+    <a href="killers.html">
+      <img src="images/killers.png" alt="Killers" width="200">
+    </a>
+    <p>Killers</p>
+  </div>
+
+  <div class="img-button">
+    <a href="survivors.html">
+      <img src="images/survivors.png" alt="Survivors" width="200">
+    </a>
+    <p>Survivors</p>
+  </div>
+
+  <div class="img-button">
+    <a href="unreleased.html">
+      <img src="images/unreleased.png" alt="Unreleased Killers" width="200">
+    </a>
+    <p>Unreleased Killers</p>
+  </div>
+
 </body>
 </html>
