Edit styled.css and index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Forsaken Lore</h1>
+  <img src="images/title.png" alt="Forsaken Lore" class="title-img">
   <p>Select a category:</p>
 
   <div class="img-button">
